--- a/k8s/spring/deployment.yaml
+++ b/k8s/spring/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: spring-service
-          image: planner:0.1
+          image: oldentomato/planner:0.6
           ports:
             - containerPort: 8099
