--- a/k8s_backup/traefik/deployment.yaml
+++ b/k8s_backup/traefik/deployment.yaml
@@ -18,7 +18,7 @@ spec:
           image: traefik:v2.10
           args:
             - --api.insecure=true
-            - --providers.kubernetesingress
+            - --providers.kubernetescrd
             - --entrypoints.web.address=:80
           ports:
             - name: web
